Create carousel with 3 slides

--- a/flask_project/templates/base.html
+++ b/flask_project/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/nav.css') }}" type="text/css"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/background.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/carousel.css') }}"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/69d933cef6.js" crossorigin="anonymous"></script>
@@ -88,6 +89,63 @@
             <p>ул.Браила 8</p>
         </div>
         <div class="loc-img"><i class="fa-solid fa-location-dot"></i></div>
+    </div>
+</section>
+<section class="carousel-wrapper">
+    <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class=""
+                    aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"
+                    class=""></button>
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class="active"
+                    aria-current="true"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item">
+                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+                     aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                </svg>
+                <div class="container">
+                    <div class="carousel-caption-start">
+                        <h1>Beauty Studio Style</h1>
+                        <p class="opacity-75">Ние правим всичко възможно по силите си, за да може да се почувстваш уверен и атрактивен</p>
+                        <span class="hair-img-wrapper0"><img src="../static/images/fashion-model7.jpg" alt="img"/></span>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item active carousel-item-start">
+                <span class="hair-img-wrapper1"><img src="../static/images/hair-model2.jpg" alt="img"/></span>
+                <span class="hair-img-wrapper2"><img src="../static/images/hair-model3.jpg" alt="img"/></span>
+                <span class="hair-img-wrapper3"><img src="../static/images/hair-model4.jpg" alt="img"/></span>
+                <span class="hair-img-wrapper4"><img src="../static/images/hair-model5.jpg" alt="img"/></span>
+                <span class="hair-img-wrapper5"><img src="../static/images/hair-model6.jpg" alt="img"/></span>
+                <div class="container">
+                    <div class="carousel-caption1">
+                        <p>Довери се на професионалистите</p>
+                        <h1>Боядисване на коса, независимо от степента на сложност</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item carousel-item-next carousel-item-start">
+                <span class="manicure-img-wrapper"><img src="../static/images/manicure1.jpg" alt="manicure"/></span>
+                <div class="container">
+                    <div class="carousel-caption-end">
+                        <h1>Перфектен маникюр</h1>
+                        <p>Старателна грижа за вашите нокти, извършена прецизно от нашите маникюристи</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
 </section>
 {% block content %}
