--- a/flask_project/static/css/nav.css
+++ b/flask_project/static/css/nav.css
@@ -8,6 +8,10 @@
     padding-bottom: 10px;
     padding-top: 10px;
     width: 100%;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+
 
 }
 
@@ -18,7 +22,7 @@
 }
 
 nav {
-    width: 440px;
+    width: 480px;
 }
 
 .nav-list,
