--- a/flask_project/static/css/nav.css
+++ b/flask_project/static/css/nav.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-    background: white;
+    background: #f9f9f9;
     padding-left: 50px;
     padding-right: 50px;
     padding-bottom: 10px;
@@ -31,7 +31,7 @@ nav {
 .dropdown-content-level-three {
     list-style: none;
     display: flex;
-    background: white;
+    background: #f9f9f9;
 }
 
 .nav-list {
