Changed backgound color of a section

--- a/flask_project/static/css/styles.css
+++ b/flask_project/static/css/styles.css
@@ -30,7 +30,7 @@ body::-webkit-scrollbar-thumb {
 
 /* Section under first carousel */
 .service-and-price-text {
-    background: white;
+    background: #f9f9f9;
     padding-bottom: 9px;
     text-align: center;
     padding-top: 120px;
