--- a/flask_project/templates/base.html
+++ b/flask_project/templates/base.html
@@ -267,7 +267,7 @@
 <section class="second-carousel-wrapper">
     <div class="carousel-container">
         <div class="carousel-view">
-            <button id="prev-btn" class="prev-btn">
+            <button id="prev-btn" class="prev-btn" disabled>
                 <svg viewBox="0 0 512 512" width="20" title="chevron-circle-left">
                     <path d="M256 504C119 504 8 393 8 256S119 8 256 8s248 111 248 248-111 248-248 248zM142.1 273l135.5 135.5c9.4 9.4 24.6 9.4 33.9 0l17-17c9.4-9.4 9.4-24.6 0-33.9L226.9 256l101.6-101.6c9.4-9.4 9.4-24.6 0-33.9l-17-17c-9.4-9.4-24.6-9.4-33.9 0L142.1 239c-9.4 9.4-9.4 24.6 0 34z"/>
                 </svg>
@@ -325,6 +325,14 @@
         </div>
     </div>
 </section>
+<div class="first-pag-line" id="first-line"></div>
+<div class="second-pag-line" id="second-line"></div>
+<div class="pagination-items">
+    <p id="first-pag-item">1</p>
+    <p id="slash">/</p>
+    <p id="second-pag-item">2</p>
+</div>
+
 {% block content %}
 {% endblock %}
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
