--- a/flask_project/static/css/second-carousel.css
+++ b/flask_project/static/css/second-carousel.css
@@ -27,7 +27,7 @@ button {
 .carousel-view .item-list {
     max-width: 1124px;
     width: 80vw;
-    padding: 50px 10px;
+    padding: 50px 10px 50px 10px;
     display: flex;
     /*align-items: flex-start;*/
     gap: 48px;
