Add css to latest created section

--- a/flask_project/static/css/styles.css
+++ b/flask_project/static/css/styles.css
@@ -29,7 +29,7 @@ body::-webkit-scrollbar-thumb {
     /* creates padding around scroll thumb */
 }
 
-/* Section under first carousel */
+/* HOME PAGE Section under first carousel */
 .service-and-price-text {
     background: #f9f9f9;
     padding-bottom: 9px;
@@ -40,7 +40,7 @@ body::-webkit-scrollbar-thumb {
 .service-and-price-text p {
     font-size: 20px;
     text-transform: uppercase;
-    color: #e2af48;
+    color: #c48d4d;
     letter-spacing: 1px;
 }
 
@@ -50,6 +50,7 @@ body::-webkit-scrollbar-thumb {
     letter-spacing: 1px;
 }
 
+/* HOME PAGE pagination lines and numbers */
 .first-pag-line {
     display: block;
     position: relative;
@@ -90,4 +91,99 @@ body::-webkit-scrollbar-thumb {
 
 #second-pag-item {
     margin-left: 3px;
+}
+
+/* HOME PAGE inspiration works */
+.our-works {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    height: 510px;
+}
+.our-works-wrapper {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 40px;
+    width: 77%;
+}
+
+.instagram-link {
+    width: 30%;
+}
+
+.instagram-link p:nth-child(1) {
+    font-size: 20px;
+    text-transform: uppercase;
+    color: #c48d4d;
+}
+
+#instagram-link-second-p {
+    width: 264px;
+    margin: 25px 0 57px 0;
+    font-weight: 400;
+    font-size: 19px;
+
+}
+
+.instagram-link h3 {
+    font-weight: bold;
+    font-size: 33px;
+}
+
+.instagram-link a {
+    box-shadow: inset 0 0 0 0 pink;
+    width: 263px;
+    display: block;
+    text-align: center;
+    padding: 15px 0;
+    text-decoration: none;
+    background: black;
+    color: white;
+    font-weight: 500;
+    font-size: 18px;
+    border-radius: 7px;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out ;
+}
+
+.instagram-link a:hover {
+    background: black;
+    box-shadow: inset 200px 0 0 0 pink;
+}
+
+
+
+.instagram-link a i {
+    margin-right: 16px;
+    font-size: 23px;
+}
+
+.instagram-photos {
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+
+}
+
+.instagram-photos span {
+    display: block;
+    height: 450px;
+    width: 300px;
+    border-radius: 5px;
+}
+
+.instagram-photos span:nth-child(odd) {
+    position: relative;
+    bottom: 44px
+}
+
+.instagram-photos span:nth-child(even) {
+    position: relative;
+    top: 20px
+}
+
+
+.instagram-photos span img {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
 }
