Add google map location

--- a/flask_project/templates/home.html
+++ b/flask_project/templates/home.html
@@ -155,4 +155,19 @@
             </div>
         </div>
     </section>
+    <section class="google-map">
+        <p class="location-studio">Местоположение</p>
+        <p class="location-studio-dropdown">Нашите салони</p>
+        <div class="location-dropdown">
+            <i class="fa-solid fa-location-dot"></i> Пловдив <i class="fa-solid fa-angle-down" id="angle"></i>
+        </div>
+        <div class="location-options" hidden>
+            <p>Пловдив</p>
+        </div>
+        <div class="google-map-wrapper">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2957.758378929313!2d24.741113012119783!3d42.15545704788266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14acd194263ed1db%3A0xa4ce1caf68c645e0!2z0YPQuy4g4oCe0JHRgNCw0LjQu9Cw4oCcIDgsIDQwMDMg0JrRitGA0YjQuNGP0LrQsCwg0J_Qu9C-0LLQtNC40LI!5e0!3m2!1sbg!2sbg!4v1701444761507!5m2!1sbg!2sbg"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </section>
 {% endblock %}
